--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,5 +6,6 @@ extends:
 - "prettier"
 - "prettier/@typescript-eslint"
 rules:
+  "@typescript-eslint/no-explicit-any": off
   "@typescript-eslint/explicit-function-return-type": off
 
