--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "!node_modules"
   ],
   "devDependencies": {
+    "@types/inquirer": "^6.0.3",
     "@types/jest": "^24.0.15",
+    "@types/js-yaml": "^3.12.1",
     "@types/node": "^12.0.10",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
@@ -54,5 +56,9 @@
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
+  },
+  "dependencies": {
+    "inquirer": "^6.4.1",
+    "js-yaml": "^3.13.1"
   }
 }
