--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,4 +8,8 @@ extends:
 rules:
   "@typescript-eslint/no-explicit-any": off
   "@typescript-eslint/explicit-function-return-type": off
-
+  "@typescript-eslint/no-unused-vars":
+    - error
+    - vars: all
+      args: none
+      ignoreRestSiblings: true
