--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "!node_modules"
   ],
   "devDependencies": {
+    "@types/ejs": "^2.6.3",
     "@types/inquirer": "^6.0.3",
     "@types/jest": "^24.0.15",
     "@types/js-yaml": "^3.12.1",
@@ -58,6 +59,7 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "ejs": "^2.6.2",
     "inquirer": "^6.4.1",
     "js-yaml": "^3.13.1"
   }
